fix overflowing server names and add name to info

--- a/app/components/servernavbar/servernavbar.less
+++ b/app/components/servernavbar/servernavbar.less
@@ -35,6 +35,10 @@
   font-size: 24px;
   padding-top: 5px;
   color: #DDC271;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .navigationbar .servername:hover,
